# VideoShare

./: CMakeLists.txt  Main.qml  devicesenumerationmodel.cpp  devicesenumerationmodel.h  frameprovider.cpp  frameprovider.h  main.cpp  pimpl.h  pixmapimage.cpp  pixmapimage.h
ffmpeg/doc/: ffmpeg-all.html  ffmpeg-codecs.html  ffmpeg.html  ffplay-all.html  ffprobe-all.html
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc
recorder/: CMakeLists.txt  ffmpeg_setup.cmake  frameworker.cpp  frameworker.h  process.cpp  process.h  processenumerator.cpp  processenumerator.h  recorder.cpp  recorder.h  recordingdevice.cpp  recordingdevice.h  recordingdevicefactory.cpp  recordingdevicefactory.h  settings.cpp  settings.h  streamoptions.cpp  streamoptions.h
recorder/ffmpeg/doc/: ffmpeg-filters.html
recorder/ffmpeg/lib/pkgconfig/: libavformat.pc
